added minio rules
