# src/builder/docs/swagger.yaml
@@ -86,6 +86,13 @@ definitions:
     - newTag
     - oldTag
     type: object
+  model.MinioParam:
+    properties:
+      userID:
+        type: string
+      userPW:
+        type: string
+    type: object
   model.RegistryManifestV1:
     properties:
       architecture:
@@ -277,6 +284,25 @@ paths:
           schema:
             $ref: '#/definitions/model.BasicResult'
       summary: health check api
+  /minio:
+    post:
+      description: create minio
+      parameters:
+      - description: Json Parameters
+        in: body
+        name: contents
+        required: true
+        schema:
+          $ref: '#/definitions/model.MinioParam'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.BasicResult'
+      summary: create minio
   /registry/catalog:
     get:
       consumes:
